--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pgr
 Type: Package
 Title: Set of wrapper functions to work with PostgreSQL.
-Version: 0.1.9001
+Version: 0.1.9002
 Author: Diego Augusto Garcilazo
 Maintainer: Diego Augusto Garcilazo <dgarcilazo@anlis.gov.ar>
 Description: Main goal is to make connection, import, export with PostgreSQL easier. This package uses others to fulfill its goal in a simple way.
@@ -10,6 +10,7 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     RPostgres (>= 1.0),
+    RPostgreSQL (>= 0.6),
     readxl (>= 1.0),
     foreign (>= 0.8),
     DBI (>= 0.7),
