--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,6 @@ Imports:
     dbplyr (>= 1.2),
     dplyr (>= 0.7),
     purrr (>= 0.2),
-    glue (>= 1.2)
+    glue (>= 1.2),
+    magrittr
 RoxygenNote: 6.0.1
