--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,4 +21,6 @@ Imports:
     magrittr,
     R6
 RoxygenNote: 6.1.0
-Suggests: testthat
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
