--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,9 @@ Imports:
     purrr (>= 0.2),
     glue (>= 1.2),
     magrittr,
-    R6
-RoxygenNote: 6.1.0
+    R6,
+    readr
+RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
